--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,4 +4,11 @@
         android:id="@+id/nav_add_user"
         android:title="Add User"
         android:icon="@android:drawable/ic_menu_add" />
+
+    <item
+        android:id="@+id/nav_view_users"
+        android:title="View Users"
+        android:icon="@android:drawable/ic_menu_view" />
+
+
 </menu>
