--- a/app/src/main/res/layout/fragment_add_user.xml
+++ b/app/src/main/res/layout/fragment_add_user.xml
@@ -66,6 +66,22 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/tv_verify_secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Verify translation"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:paddingTop="4dp"
+            android:layout_marginStart="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:textColor="?attr/colorPrimary"
+            android:textStyle="bold"
+            android:autoLink="none"
+
+            android:foreground="?android:attr/selectableItemBackgroundBorderless" />
+
+        <TextView
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -79,6 +95,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/tv_verify_tertiary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Verify translation"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:paddingTop="4dp"
+            android:layout_marginStart="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:textColor="?attr/colorPrimary"
+            android:textStyle="bold"
+            android:autoLink="none"
+
+            android:foreground="?android:attr/selectableItemBackgroundBorderless" />
+
 
         <!-- Date and Time -->
         <LinearLayout
